test/files/neg/t5830.check
t5830.scala:6: error: unreachable code
    case 'a' => println("b") // unreachable
                       ^
t5830.scala:4: error: could not emit switch for @switch annotated match
  def unreachable(ch: Char) = (ch: @switch) match {
                                    ^
two errors found
